--- a/.github/workflows/semgrep.yml
+++ b/.github/workflows/semgrep.yml
@@ -1,3 +1,4 @@
+name: Semgrep
 on:
   workflow_dispatch:
     inputs:
@@ -5,21 +6,34 @@ on:
         description: 'Purpose'     
         required: true
         default: 'test'
-  pull_request: {}
   push:
     branches:
-    - develop
+    - master
     paths:
     - .github/workflows/semgrep.yml
+  pull_request: {}
   schedule:
   - cron: '0 0 * * 0'
-name: Semgrep
 jobs:
   semgrep:
+    permissions:
+      contents: read # for actions/checkout to fetch code
+      security-events: write # for github/codeql-action/upload-sarif to upload SARIF results
     name: Scan
     runs-on: ubuntu-latest
     steps:
+    # Checkout project source code
     - uses: actions/checkout@v2
+    # Scan code using project's configuration on https://semgrep.dev/manage
     - uses: returntocorp/semgrep-action@v1
       with:
         publishToken: ${{ secrets.SEMGREP_APP_TOKEN }}
+        publishDeployment: ${{ secrets.SEMGREP_DEPLOYMENT_ID }}
+        generateSarif: "1"
+
+      # Upload SARIF file generated in previous step
+    - name: Upload SARIF file
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: semgrep.sarif
+      if: always()
